Fix deprecation warnings (#22)